[Frontend] Fix embed spacing bugs
The newly introduced .embed-group-s represent units which should be
word-wrapped as a whole (formerly, word wraps would occur around the
invisible .embed-link-s and .embed-space-s, resulting in what looked
like empty lines). Perhaps it is really time to migrate those to
flexboxes.

The ".embed-block" was erroneously skipped in commit
b6c1cc4f4277ac4d5434f27baccfdd6ed6cd4f20.

--- a/src/static/room.css
+++ b/src/static/room.css
@@ -174,15 +174,14 @@ body {
 }
 /* HACK: Make embeds extend into the padding
  * For .embed-first, a negative top margin seems not to affect the embed (or
- * anything at all), so we transform the embed up instead, and cover the fact
- * up by a negative bottom margin. */
+ * anything at all), so we transform the embed up instead. */
 .message > .line .content .message-text .embed-outer.block.embed-first {
   -webkit-transform: translateY(-1px);
   transform: translateY(-1px);
   margin: 0;
 }
 .message > .line .content .message-text .embed-outer.block.embed-first +
-.embed-block {
+.embed-outer.block {
   margin-top: 0;
 }
 .message > .line .content .message-text .embed-outer.block.embed-last {
@@ -265,6 +264,9 @@ body {
 }
 .message-text .embed-outer.embed-last {
   margin-bottom: 0;
+}
+.message-text .embed-group {
+  display: inline-block;
 }
 .message-text .embed-inner {
   display: inline-block;
